/*
 * Copyright (C) 2019 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";
option optimize_for = LITE_RUNTIME;

package perfetto.protos;

message AndroidCpuMetric {

  // CPU frequency information for one CPU and per thread.
  message CpuFrequencyData {
    optional uint32 id = 1;
    optional int64 min_freq_khz = 2;
    optional int64 max_freq_khz = 3;
    // Average CPU frequency weighted by the time the CPU was running at
    // each frequency.
    optional int64 avg_freq_khz = 4;
    // Total time the thread was running on this CPU, in nanoseconds.
    optional int64 duration_ns = 5;
  }

  // CPU frequency information agggregated per CPU and thread.
  message Thread {
    optional string name = 1;
    repeated CpuFrequencyData cpu = 2;
  }

  // Threads (name and CPU frequency) per process.
  message Process {
    optional string name = 1;
    repeated Thread threads = 2;
  }
 
  // Process name and CPU frequency data aggregated by thread and cpu.
  repeated Process process_info = 1;
}